--- a/src/content/blog/Programacion-Orientada-a-Objetos-Conceptos-basicos-.mdx
+++ b/src/content/blog/Programacion-Orientada-a-Objetos-Conceptos-basicos-.mdx
@@ -23,21 +23,23 @@ La Programación Orientada a Objetos (POO) es un paradigma de programación que 
 
 Un objeto es una instancia particular de una clase, que representa una entidad concreta dentro de un programa. Por ejemplo, si estamos construyendo un programa para una biblioteca, podríamos tener una clase llamada `Libro`, y cada libro específico sería un objeto de esa clase.
 
-```python
-class Libro:
-    def __init__(self, titulo, autor):
-        self.titulo = titulo
-        self.autor = autor
+```javascript
+class Libro {
+	constructor(titulo, autor) {
+		this.titulo = titulo
+		this.autor = autor
+	}
+}
 
-# Creación de objetos
-libro1 = Libro("El Quijote", "Miguel de Cervantes")
-libro2 = Libro("Harry Potter", "J.K. Rowling")
+// Creación de objetos
+let libro1 = new Libro('El Quijote', 'Miguel de Cervantes')
+let libro2 = new Libro('Harry Potter', 'J.K. Rowling')
 
-print(libro1.titulo)  # Output: El Quijote
-print(libro2.autor)   # Output: J.K. Rowling
+console.log(libro1.titulo) // Output: El Quijote
+console.log(libro2.autor) // Output: J.K. Rowling
 ```
 
-En este ejemplo, `Libro` es una clase que define la estructura y el comportamiento de los libros. `titulo` y `autor` son atributos que describen las características de cada libro. Al crear objetos (`libro1` y `libro2`), especificamos los valores de estos atributos para cada instancia.
+Este código en JavaScript utiliza la sintaxis de clases introducida en ECMAScript 6 para definir la clase Libro. Luego, los objetos libro1 y libro2 se crean utilizando el operador new, de manera similar a la creación de instancias en Python. Las propiedades del objeto se acceden utilizando la notación de punto (libro1.titulo, libro2.autor).
 
 ### 1.2. Clases
 
@@ -51,108 +53,133 @@ Los atributos son variables que están asociadas a un objeto particular. Represe
 
 Los métodos son funciones definidas dentro de una clase que pueden ser llamadas para realizar operaciones en los objetos de esa clase. Estos métodos pueden utilizarse para modificar los atributos de un objeto o para realizar acciones relacionadas con él.
 
-```python
-class Libro:
-    def __init__(self, titulo, autor):
-        self.titulo = titulo
-        self.autor = autor
+```javascript
+class Libro {
+	constructor(titulo, autor) {
+		this.titulo = titulo
+		this.autor = autor
+	}
 
-    def mostrar_informacion(self):
-        print("Título:", self.titulo)
-        print("Autor:", self.autor)
+	mostrarInformacion() {
+		console.log('Título:', this.titulo)
+		console.log('Autor:', this.autor)
+	}
+}
 
-libro1 = Libro("El Quijote", "Miguel de Cervantes")
-libro1.mostrar_informacion()
-# Output:
-# Título: El Quijote
-# Autor: Miguel de Cervantes
+let libro1 = new Libro('El Quijote', 'Miguel de Cervantes')
+libro1.mostrarInformacion()
+// Output:
+// Título: El Quijote
+// Autor: Miguel de Cervantes
 ```
 
-En este ejemplo, `mostrar_informacion()` es un método que muestra la información del libro. Al llamar a este método en el objeto `libro1`, obtenemos la información del libro.
+En JavaScript, la función **init** se reemplaza con el método constructor. Además, el método mostrar_informacion se convierte en mostrarInformacion, utilizando la notación de camelCase, común en JavaScript. La impresión de información se realiza con console.log() en lugar de print(). Por último, para llamar al método, se utiliza la notación de punto (libro1.mostrarInformacion()).
 
 ### 1.5. Encapsulación
 
 La encapsulación es un concepto que permite ocultar la implementación interna de un objeto y solo exponer las partes necesarias para interactuar con él. Esto se logra mediante el uso de métodos de acceso (getters) y métodos de modificación (setters).
 
-```python
-class Libro:
-    def __init__(self, titulo, autor):
-        self.__titulo = titulo
-        self.__autor = autor
+```javascript
+class Libro {
+	constructor(titulo, autor) {
+		this.__titulo = titulo
+		this.__autor = autor
+	}
 
-    def get_titulo(self):
-        return self.__titulo
+	get titulo() {
+		return this.__titulo
+	}
 
-    def set_titulo(self, titulo):
-        self.__titulo = titulo
+	set titulo(titulo) {
+		this.__titulo = titulo
+	}
+}
 
-libro1 = Libro("El Quijote", "Miguel de Cervantes")
-print(libro1.get_titulo())  # Output: El Quijote
-libro1.set_titulo("Don Quijote de la Mancha")
-print(libro1.get_titulo())  # Output: Don Quijote de la Mancha
+let libro1 = new Libro('El Quijote', 'Miguel de Cervantes')
+console.log(libro1.titulo) // Output: El Quijote
+libro1.titulo = 'Don Quijote de la Mancha'
+console.log(libro1.titulo) // Output: Don Quijote de la Mancha
 ```
 
-En este ejemplo, `titulo` y `autor` se han definido como atributos privados utilizando el prefijo `__`. Para acceder a estos atributos desde fuera de la clase, utilizamos métodos de acceso (`get_titulo()`). Además, se proporcionan métodos de modificación (`set_titulo()`) para cambiar los valores de los atributos de manera controlada.
+En JavaScript, utilizamos los getters y setters para obtener y establecer los valores de las propiedades de manera segura. Los getters y setters se definen utilizando la sintaxis de métodos especiales get y set, y pueden ser llamados directamente como si fueran propiedades.
 
 ### 1.6. Herencia
 
 La herencia es un mecanismo que permite que una clase (llamada clase derivada o subclase) herede atributos y métodos de otra clase (llamada clase base o superclase). Esto fomenta la reutilización de código y permite la creación de jerarquías de clases.
 
-```python
-class Animal:
-    def __init__(self, nombre):
-        self.nombre = nombre
+```javascript
+class Animal {
+	constructor(nombre) {
+		this.nombre = nombre
+	}
 
-    def hacer_sonido(self):
-        pass
+	hacerSonido() {
+		// Método abstracto, debe ser implementado por las subclases
+	}
+}
 
-class Perro(Animal):
-    def hacer_sonido(self):
-        return "Guau!"
+class Perro extends Animal {
+	hacerSonido() {
+		return '¡Guau!'
+	}
+}
 
-class Gato(Animal):
-    def hacer_sonido(self):
-        return "Miau!"
+class Gato extends Animal {
+	hacerSonido() {
+		return '¡Miau!'
+	}
+}
 
-perro = Perro("Bobby")
-gato = Gato("Mittens")
+let perro = new Perro('Bobby')
+let gato = new Gato('Mittens')
 
-print(perro.hacer_sonido())  # Output: Guau!
-print(gato.hacer_sonido())   # Output: Miau!
+console.log(perro.hacerSonido()) // Output: ¡Guau!
+console.log(gato.hacerSonido()) // Output: ¡Miau!
 ```
 
-En este ejemplo, `Animal` es la clase base y `Perro` y `Gato` son clases derivadas que heredan de `Animal`. Cada clase derivada redefine el método `hacer_sonido()` para que sea específico de esa clase.
+En este ejemplo, `Animal` es la clase base y `Perro` y `Gato` son clases derivadas que heredan de `Animal`. Cada clase derivada redefine el método `hacer_sonido()` para que sea específico de esa clase.En JavaScript, las clases y métodos se definen de manera similar a Python, pero con algunas diferencias de sintaxis. Aquí, se define una clase base Animal con un método hacerSonido() que actúa como un método abstracto. Luego, se crean las subclases Perro y Gato que heredan de Animal y sobrescriben el método hacerSonido() con su propio comportamiento. Finalmente, se crean instancias de Perro y Gato y se llama al método hacerSonido() para imprimir los sonidos respectivos.
 
 ### 1.7. Polimorfismo
 
 El polimorfismo es la capacidad que tienen los objetos de diferentes clases de responder al mismo mensaje de manera distinta. Esto permite tratar objetos de diferentes clases de manera uniforme.
 
-```python
-class Figura:
-    def area(self):
-        pass
+```javascript
+class Figura {
+	area() {
+		// Método abstracto, debe ser implementado por las subclases
+	}
+}
 
-class Cuadrado(Figura):
-    def __init__(self, lado):
-        self.lado = lado
+class Cuadrado extends Figura {
+	constructor(lado) {
+		super()
+		this.lado = lado
+	}
 
-    def area(self):
-        return self.lado ** 2
+	area() {
+		return this.lado ** 2
+	}
+}
 
-class Circulo(Figura):
-    def __init__(self, radio):
-        self.radio = radio
+class Circulo extends Figura {
+	constructor(radio) {
+		super()
+		this.radio = radio
+	}
 
-    def area(self):
-        return 3.14159 * self.radio ** 2
+	area() {
+		return 3.14159 * this.radio ** 2
+	}
+}
 
-figuras = [Cuadrado(4), Circulo(3)]
+let figuras = [new Cuadrado(4), new Circulo(3)]
 
-for figura in figuras:
-    print("Área:", figura.area())
+for (let figura of figuras) {
+	console.log('Área:', figura.area())
+}
 ```
 
-En este ejemplo, `Figura` es una clase base que define un método `area()`. `Cuadrado` y `Circulo` son clases derivadas que implementan el método `area()` de manera diferente. Al iterar sobre una lista de figuras, podemos llamar al método `area()` de cada objeto sin preocuparnos por el tipo específico de figura.
+En JavaScript, las clases y métodos se definen de manera similar a Python, pero con algunas diferencias de sintaxis. En este código, Figura es una clase base con un método area() que actúa como un método abstracto. Las subclases Cuadrado y Circulo heredan de Figura y sobrescriben el método area() con su propia implementación. Luego, se crean instancias de Cuadrado y Circulo y se las itera para imprimir el área de cada figura.
 
 ## 2. Principios Básicos de la Programación Orientada a Objetos
 
